validacion reporte diario y formato de fecha a todos los reportes

--- a/app/views/report/grill/grillIssuesReport.html
+++ b/app/views/report/grill/grillIssuesReport.html
@@ -41,7 +41,7 @@
                         </tr>
                         <tr ng-repeat-end ng-repeat="grill in grillIssue.Grills">
                             <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture}}</td>
+                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Size}}</td>
                             <td>{{grill.Sacks}}</td>
