--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -41,7 +41,7 @@
                         </tr>
                         <tr ng-repeat-end ng-repeat="grill in grillIssue.Grills">
                             <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture}}</td>
+                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Sacks}}</td>
                             <td>{{grill.Kilos}}</td>
@@ -62,36 +62,3 @@
         </div>
     </div>
 </div>
-<script>
-    function generatePdf () {
-            var
-             form = $('#PDF'),
-             cache_width = form.width(),
-             a4 = [595.28, 841.89];  // for a4 size paper width and height
-             
-             $('body').scrollTop(0);
-             createPDF();
-            //create pdf
-            function createPDF() {
-                getCanvas().then(function (canvas) {
-                    var
-                    doc = new jsPDF({
-                        unit: 'px',
-                        format: 'a4'
-                    });
-                    doc.addHTML(document.body, function() {
-                        doc.save('ReporteInventarioSegunda.pdf');
-                        form.width(cache_width);
-                    });
-                });
-            }
-
-            // create canvas object
-            function getCanvas() {
-                //form.width((a4[0] * 1.33333) - 80).css('max-width', 'none');
-                return html2canvas(form, {
-                    removeContainer: true
-                });
-            }
-        }
-</script>
