--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -57,7 +57,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="report in dailyProcess">
-                        <td>{{report.Date | date: 'medium'}}</td>
+                        <td>{{report.Date | date: 'dd/MM/yyyy' }}</td>
                         <td>{{report.Producer}}</td>
                         <td>{{report.Folio}}</td>
                         <td>{{report.Cylinder}}</td>
