--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -45,7 +45,7 @@
                     <tbody>
                         <tr ng-repeat="grill in secondCurrentInventory | filter:searchGrillReport">
                             <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture}}</td>
+                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Sacks}}</td>
                             <td>{{grill.Kilos}}</td>
