--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -56,7 +56,7 @@
                         <tr ng-repeat="report in producerReport">
                             <td>{{report.Remission}}</td>
                             <td>{{report.DateReceptionCapture}}</td>
-                            <td>{{report.ProcessDate | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{report.ProcessDate | date:'dd/MM/yyyy'}}</td>
                             <td>{{report.Variety}}</td>
                             <td>{{report.Batch}}</td>
                             <td>{{report.Cylinder}}</td>
