se agrego grafica "porcentaje de primeras y segundas"

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -28,7 +28,7 @@
     </div>
     <div class="col-sm-4">
         <div class="card">
-            <div></div>
+            <div id="percentageOfFirstAndSecond"></div>
         </div>
     </div>
 </div>
