se corrigio bug al eliminar recepciones

--- a/app/views/remission/remissionManage.html
+++ b/app/views/remission/remissionManage.html
@@ -52,7 +52,7 @@
                             <button class="btn btn-icon command-edit" ng-click="redirectUpdate(remission.Id)">
                         <span class="md md-edit"></span>
                     </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(remission.Id)">
+                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(remission.Id, remission.RemissionFolio)">
                         <span class="md md-delete"></span>
                     </button>
                         </td>
