--- a/app/views/grill/grillAdd.html
+++ b/app/views/grill/grillAdd.html
@@ -6,6 +6,15 @@
             </div>
             <div class="card-body card-padding">
                 <div class="form-group">
+                    <label for="folio" class="col-sm-2 control-label">Numero de Parrilla </label>
+                    <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input type="number" min="1" name="Folio" class="form-control input-sm" id="folio" placeholder="numero de parrilla" ng-model="grill.Folio">
+                            <small class="help-block has-error" style="color:red" ng-show="grillForm.Folio.$error.number">Numero no valido.</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="prodF" class="col-sm-2 control-label">Productores *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
@@ -31,7 +40,15 @@
                     <label for="fieldF" class="col-sm-2 control-label">Campo *</label>
                     <div class="col-sm-10">
                         <div class="fg-line select">
-                            <select id="fieldF" class="form-control" ng-model="grill.Field" ng-options="field.FieldName for field in fields"></select>
+                            <select id="fieldF" class="form-control" ng-model="grill.Field" ng-options="field.FieldName for field in fields" ng-change="getBatchInCurrentField(grill.Field)"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="batchF" class="col-sm-2 control-label">Huerta/Lote *</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line select">
+                            <select id="batchF" class="form-control" ng-model="grill.Batch" ng-options="batch.Batch for batch in batches"></select>
                         </div>
                     </div>
                 </div>
