se agrego modal para la alta de variedades en huertas

--- a/app/views/field/field.html
+++ b/app/views/field/field.html
@@ -65,6 +65,11 @@
                                 <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBatch(batch)" ng-disabled="!batchForm.$valid">Guardar</button>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button class="btn btn-info btn-sm" data-ng-click="showAddVarietyModal()" ng-disabled="!batchForm.$valid">Agregar Variedades</button>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
