--- a/app/views/humidity/humidityAdd.html
+++ b/app/views/humidity/humidityAdd.html
@@ -32,8 +32,8 @@
                         <td>{{receptionEntry.Variety}}</td>
                         <td>{{receptionEntry.Producer}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="redirectToAddHumidity(receptionEntry.Id)">
-                                <span class="md md-format-color-reset"></span>
+                            <button class="btn btn-default" ng-click="redirectToAddHumidity(receptionEntry.Id)">
+                                <i class="md md-format-color-reset"></i>
                             </button>
                         </td>
                     </tr>
