--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -46,8 +46,8 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="grill in genericGrillReport | filter:searchGrillReport">
-                            <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
+                            <td>{{grill.Folio}}</td>
+                            <td>{{grill.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Size}}</td>
                             <td>{{grill.Sacks}}</td>
