--- a/app/views/grill/grillCurrentInv.html
+++ b/app/views/grill/grillCurrentInv.html
@@ -18,7 +18,7 @@
             <button class="btn btn-link" ng-click="generatePDFCurrent()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="grillCurrentInvTable" class="table table-striped table-vmiddle">
+            <table id="grillCurrentInvTable" class="table table-bordered">
                 <thead>
                     <tr>
                         <th>No. de Parilla</th>
@@ -33,7 +33,7 @@
                         <th>Campo</th>
                         <th>Peso de la Muestra</th>
                         <th>Humedad</th>
-                        <th>No.Nueces</th>
+                        <th>No.Nueces por Kilo</th>
                         <th>Rendimiento</th>
                         <th>Total</th>
                         <th>Operaciones</th>
@@ -41,7 +41,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="grill in grills | filter:searchGrills">
-                        <td>{{grill.Id}}</td>
+                        <td>{{grill.Folio}}</td>
                         <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{grill.Receptions}}</td>
                         <td>{{grill.Size}}</td>
@@ -57,9 +57,9 @@
                         <td>{{grill.Performance}}</td>
                         <td>{{grill.TotalWeightOfEdibleNuts}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(grill.Id)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="confirmationDelete(grill.Id)" data-toggle="tooltip" data-placement="bottom"
                                 title="Eliminar">
-                                <span class="md md-delete"></span>
+                                <i class="md md-delete"></i>
                             </button>
                         </button>
                         </td>
