--- a/app/views/grill/grillManage.html
+++ b/app/views/grill/grillManage.html
@@ -46,7 +46,7 @@
             <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="grillManageTable" class="table table-striped table-vmiddle">
+            <table id="grillManageTable" class="table table-bordered">
                 <thead>
                     <tr>
                         <th>No. de Parrilla</th>
@@ -61,7 +61,7 @@
                         <th>Campo</th>
                         <th>Peso de la Muestra</th>
                         <th>Humedad</th>
-                        <th>No.Nueces</th>
+                        <th>No.Nueces por Kilo</th>
                         <th>Rendimiento</th>
                         <th>Total</th>
                         <th ng-if="!IsGrillToReception">Status</th>
@@ -70,7 +70,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="grill in grills | filter:searchUser | filter:{Producer: search.producer, Variety: search.variety, Quality: search.quality}">
-                        <td>{{grill.Id}}</td>
+                        <td>{{grill.Folio}}</td>
                         <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{grill.Receptions}}</td>
                         <td>{{grill.Size}}</td>
@@ -92,21 +92,21 @@
                             </div>
                         </td>
                         <td ng-if="!IsGrillToReception">
-                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(grill.Id, grill)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="redirectUpdate(grill.Id, grill)" data-toggle="tooltip" data-placement="bottom"
                                 title="Modificar">
-                                <span class="md md-edit"></span>
+                                <i class="md md-edit"></i>
                             </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(grill.Id)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="confirmationDelete(grill.Id)" data-toggle="tooltip" data-placement="bottom"
                                 title="Eliminar">
-                                <span class="md md-delete"></span>
+                                <i class="md md-delete"></i>
                             </button>
-                            <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(grill.Id)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="redirectReceptionToGrill(grill.Id)" data-toggle="tooltip" data-placement="bottom"
                                 title="Agregar folio de recepcion">
-                                <span class="md md-assignment"></span>
+                                <i class="md md-assignment"></i>
                             </button>
-                            <button ng-show="grill.SampleWeight == ''" class="btn btn-icon command-edit" ng-click="redirectAddSampling(grill.Id)" data-toggle="tooltip"
+                            <button ng-show="grill.SampleWeight == ''" class="btn btn-default" ng-click="redirectAddSampling(grill.Id)" data-toggle="tooltip"
                                 data-placement="bottom" title="Agregar muestreo">
-                            <span class="md md-description"></span>
+                            <i class="md md-description"></i>
                         </button>
                         </td>
                         <td ng-if="IsGrillToReception">
