--- a/app/views/humidity/humidityLastSamplings.html
+++ b/app/views/humidity/humidityLastSamplings.html
@@ -13,7 +13,7 @@
                     </div>
                 </div>
             </div>
-            <table id="data-table-command" class="table table-striped table-vmiddle">
+            <table id="data-table-command" class="table table-bordered">
                 <thead>
                     <tr>
                         <td>Cilindro</td>
@@ -36,8 +36,8 @@
                         <td>{{humidity.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{humidity.HumidityPercentage}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(humidity.Id)">
-                                <span class="md md-delete"></span>
+                            <button class="btn btn-default" ng-click="confirmationDelete(humidity.Id)">
+                                <i class="md md-delete"></i>
                             </button>
                         </td>
                     </tr>
