--- a/app/views/humidity/humidityManage.html
+++ b/app/views/humidity/humidityManage.html
@@ -17,7 +17,7 @@
             <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="data-table-command" class="table table-striped table-vmiddle">
+            <table id="data-table-command" class="table table-bordered">
                 <thead>
                     <tr>
                         <td>Cilindro</td>
@@ -40,8 +40,8 @@
                         <td>{{humidity.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                         <td>{{humidity.HumidityPercentage}}</td>
                         <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(humidity.Id)">
-                                <span class="md md-delete"></span>
+                            <button class="btn btn-default" ng-click="confirmationDelete(humidity.Id)">
+                                <i class="md md-delete"></i>
                             </button>
                         </td>
                     </tr>
