--- a/app/views/processResult/processResultAdd.html
+++ b/app/views/processResult/processResultAdd.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
             </div>
-            <table class="table table-striped table-vmiddle">
+            <table class="table table-bordered">
                 <thead>
                     <tr>
                         <th>Id</th>
@@ -37,17 +37,17 @@
                         <td>{{receptionEntry.Cylinder}}</td>
                         <td>
                             <div ng-if="!receptionEntry.Sampling">
-                                <button class="btn btn-icon command-edit" ng-click="redirectAddSampling(receptionEntry.Id)" data-toggle="tooltip" data-placement="bottom"
+                                <button class="btn btn-default" ng-click="redirectAddSampling(receptionEntry.Id)" data-toggle="tooltip" data-placement="bottom"
                                     title="agregar muestreo">
-                                    <span class="md md-description"></span>
+                                    <i class="md md-description"></i>
                             </button>
                             </div>
                         </td>
                         <td>
                             <div ng-if="!receptionEntry.ProcessResult">
-                                <button class="btn btn-icon command-edit" ng-click="redirectAddProcessResult(receptionEntry.Id, receptionEntry.Receptions)"
+                                <button class="btn btn-default" ng-click="redirectAddProcessResult(receptionEntry.Id, receptionEntry.Receptions)"
                                     data-toggle="tooltip" data-placement="bottom" title="Agregar resultado de proceso">
-                                    <span class="md md-assignment-returned"></span>
+                                    <i class="md md-assignment-returned"></i>
                             </button>
                             </div>
                         </td>
