--- a/app/views/processResult/processResultManage.html
+++ b/app/views/processResult/processResultManage.html
@@ -18,7 +18,7 @@
             <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="SamplingReceptionTable" class="table table-striped table-vmiddle">
+            <table id="SamplingReceptionTable" class="table table-bordered">
                 <thead>
                     <tr>
                         <th>Folios</th>
@@ -55,11 +55,11 @@
                         <td>{{sampling.SacksThird}}</td>
                         <td>{{sampling.KilosThird}}</td>
                         <td>
-                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
-                        <span class="md md-edit"></span>
+                            <button class="btn btn-default" ng-click="redirectUpdate(sampling)">
+                        <i class="md md-edit"></i>
                     </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDeleteReception(sampling.Id, sampling.Folio)">
-                        <span class="md md-delete"></span>
+                            <button class="btn btn-default" ng-click="confirmationDeleteReception(sampling.Id, sampling.Folio)">
+                        <i class="md md-delete"></i>
                     </button>
                         </td>
                     </tr>
@@ -68,3 +68,6 @@
         </div>
     </div>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
