--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -9,19 +9,48 @@
                     <label for="isearch" class="col-sm-2 control-label">Buscar</label>
                     <div class="col-sm-12">
                         <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReception">
                         </div>
                     </div>
+                </div>
+                <div ng-show="showSearchOptions">
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <div class="fg-line">
+                                <input type="text" class="form-control" placeholder="buscar por folio.." ng-model="search.folio">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <div class="fg-line">
+                                <input type="text" class="form-control" placeholder="buscar por variedad.." ng-model="search.variety">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="form-group">
+                            <div class="fg-line">
+                                <input type="text" class="form-control" placeholder="buscar por productor.." ng-model="search.producer">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="checkbox m-b-15">
+                    <label><input type="checkbox" ng-model="showSearchOptions"><i class="input-helper"></i>MOSTRAR MAS OPCIONES DE BUSQUEDA</label>
                 </div>
             </div>
             <hr>
             <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="receptionTable" class="table table-striped table-vmiddle">
+            <table id="receptionTable" class="table table-sm table-bordered table-hover">
                 <thead>
                     <tr>
                         <th>Folio</th>
+                        <th>Remisiones</th>
                         <th>Productor</th>
                         <th>Campo</th>
                         <th>Variedad</th>
@@ -36,8 +65,9 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="reception in receptions | filter:searchUser">
+                    <tr ng-repeat="reception in receptions | filter:searchReception  | filter:{Folio: search.folio, Variety:search.variety, ProducerName: search.producer}">
                         <td>{{reception.Folio}}</td>
+                        <td>{{reception.Remissions}}</td>
                         <td>{{reception.ProducerName}}</td>
                         <td>{{reception.FieldName}}</td>
                         <td>{{reception.Variety}}</td>
@@ -48,21 +78,21 @@
                         <td>{{reception.HeatHoursDrying}}</td>
                         <td>{{reception.Grills}}</td>
                         <td ng-if="!IsGrillToReception">
-                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(reception.Id,reception,reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="redirectUpdate(reception.Id,reception,reception.Folio)" data-toggle="tooltip" data-placement="bottom"
                                 title="Modificar">
-                            <span class="md md-edit"></span>
+                            <i class="md md-edit"></i>
                         </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDelete(reception.Id, reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                            <button class="btn btn-default" ng-click="confirmationDelete(reception.Id, reception.Folio)" data-toggle="tooltip" data-placement="bottom"
                                 title="Eliminar">
-                            <span class="md md-delete"></span>
+                            <i class="md md-delete"></i>
                         </button>
-                            <button class="btn btn-icon command-edit" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)" data-toggle="tooltip"
+                            <button class="btn btn-default" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)" data-toggle="tooltip"
                                 data-placement="bottom" title="Asignar recepcion a parrilla">
-                            <span class="md md-view-module"></span>
+                            <i class="md md-view-module"></i>
                         </button>
-                            <button class="btn btn-icon command-edit" ng-click="redirectAddRemission(reception.Folio)" data-toggle="tooltip"
-                                data-placement="bottom" title="Agregar remisiones">
-                            <span class="md md-description"></span>
+                            <button class="btn btn-default" ng-click="redirectAddRemission(reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                                title="Agregar remisiones">
+                            <i class="md md-description"></i>
                         </button>
                         </td>
                         <td ng-if="IsGrillToReception">
