--- a/app/views/report/grill/secondGrillCurrentInv.html
+++ b/app/views/report/grill/secondGrillCurrentInv.html
@@ -44,8 +44,8 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="grill in secondCurrentInventory | filter:searchGrillReport">
-                            <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
+                            <td>{{grill.Folio}}</td>
+                            <td>{{grill.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Sacks}}</td>
                             <td>{{grill.Kilos}}</td>
