--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -39,8 +39,8 @@
                             <td colspan="3"><b>Caja:</b>{{grillIssue.Box}}</td>
                         </tr>
                         <tr ng-repeat-end ng-repeat="grill in grillIssue.Grills">
-                            <td>{{grill.Id}}</td>
-                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
+                            <td>{{grill.Folio}}</td>
+                            <td>{{grill.DateCapture | date:'dd/MM/yyyy HH:mm'}}</td>
                             <td>{{grill.Receptions}}</td>
                             <td>{{grill.Sacks}}</td>
                             <td>{{grill.Kilos}}</td>
