--- a/app/views/sampling/samplingAdd.html
+++ b/app/views/sampling/samplingAdd.html
@@ -24,7 +24,7 @@
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required type="number" min="1" name="Sampleweight" class="form-control input-sm" id="sampleWeight" placeholder="Peso de la muestra"
-                                ng-model="sampling.SampleWeight" ng-change="CalculatePerformance(sampling.TotalWeightOfEdibleNuts, sampling.SampleWeight)">
+                                ng-model="sampling.SampleWeight" ng-change="CalculatePerformance()">
                             <small class="help-block has-error" style="color:red" ng-show="samplingForm.Sampleweight.$error.number">Numero no valido.</small>
                         </div>
                     </div>
@@ -44,7 +44,7 @@
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required type="number" min="1" name="Walnutnumber" class="form-control input-sm" id="WalnutNumer" placeholder="numero de nueces"
-                                ng-model="sampling.WalnutNumber">
+                                ng-model="sampling.WalnutNumber" ng-change="CalculateWalnutNumberPerKilo()">
                             <small class="help-block has-error" style="color:red" ng-show="samplingForm.Walnutnumber.$error.number">Numero no valido.</small>
                         </div>
                     </div>
@@ -54,18 +54,28 @@
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required type="number" min="1" name="Totalweight" class="form-control input-sm" id="TotalWeightENuts" placeholder="Peso total de nueces comestibles"
-                                ng-model="sampling.TotalWeightOfEdibleNuts" ng-change="CalculatePerformance(sampling.TotalWeightOfEdibleNuts, sampling.SampleWeight)">
+                                ng-model="sampling.TotalWeightOfEdibleNuts" ng-change="CalculatePerformance()">
                             <small class="help-block has-error" style="color:red" ng-show="samplingForm.Totalweight.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="Performance" class="col-sm-2 control-label">Rendimiento *</label>
+                    <label for="Performance" class="col-sm-2 control-label">Rendimiento</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input required readonly type="number" min="1" name="Performance" class="form-control input-sm" id="Performance" placeholder="Rendimiento"
                                 ng-model="sampling.Performance">
                             <small class="help-block has-error" style="color:red" ng-show="samplingForm.Performance.$error.number">Numero no valido.</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="WalnutNumberPerKilo" class="col-sm-2 control-label">Numero de Nueces por Kilo</label>
+                    <div class="col-sm-10">
+                        <div class="fg-line">
+                            <input required readonly type="number" min="1" name="WalnutNumberPerKilo" class="form-control input-sm" id="WalnutNumberPerKilo" placeholder="numero de nueces por kilo"
+                                ng-model="sampling.WalnutNumberPerKilo">
+                            <small class="help-block has-error" style="color:red" ng-show="samplingForm.WalnutNumberPerKilo.$error.number">Numero no valido.</small>
                         </div>
                     </div>
                 </div>
