--- a/app/views/sampling/samplingGrillManage.html
+++ b/app/views/sampling/samplingGrillManage.html
@@ -41,11 +41,11 @@
                         <td>{{sampling.Performance}}</td>
                         <td>{{sampling.TotalWeightOfEdibleNuts}}</td>
                         <td>
-                            <button class="btn btn-icon command-edit" ng-click="redirectUpdate(sampling)">
-                        <span class="md md-edit"></span>
+                            <button class="btn btn-default" ng-click="redirectUpdate(sampling)">
+                        <i class="md md-edit"></i>
                     </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmationDeleteGrill(sampling.Id)">
-                        <span class="md md-delete"></span>
+                            <button class="btn btn-default" ng-click="confirmationDeleteGrill(sampling.Id)">
+                        <i class="md md-delete"></i>
                     </button>
                         </td>
                     </tr>
@@ -54,3 +54,6 @@
         </div>
     </div>
 </div>
+<button id="fixedbuttonLeft" type="submit" class="btn bgm-teal btn-icon" data-ng-click="return()">
+        <i class="md md-arrow-back"></i>
+</button>
