--- a/app/views/field/field.html
+++ b/app/views/field/field.html
@@ -61,6 +61,13 @@
                             </div>
                         </div>
                         <div class="form-group">
+                            <div class="col-sm-10">
+                                <div class="fg-line">
+                                    <input readonly name="nutInBatch" type="text" class="form-control input-sm" placeholder="nueces en huerta/lote *" data-ng-model="batch.NutsInBatch">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
                             <div class="col-sm-offset-2 col-sm-10">
                                 <button type="submit" class="btn btn-primary btn-sm" data-ng-click="saveBatch(batch)" ng-disabled="!batchForm.$valid">Guardar</button>
                             </div>
@@ -112,45 +119,49 @@
         <div class="card-header">
             <h2>Campos</h2>
         </div>
-        <div class="card-body table-responsive">
-            <div class="col-sm-12 actionbar">
-                <div class="form-group">
-                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                    <div class="col-sm-12">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
+        <div class="card-body card-padding">
+            <div class="table-responsive">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
+                            <div class="fg-line">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchField">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <hr>
-            <button class="btn btn-link" ng-click="generatePDF()">
+                <hr>
+                <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="fieldTable" class="table table-striped table-vmiddle">
-                <thead>
-                    <tr>
-                        <th>Campo</th>
-                        <th>Huerta/Lote</th>
-                        <th>Cuadro</th>
-                        <th>Hectareas</th>
-                        <th>Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="field in fieldsAndBatches | filter:searchField">
-                        <td>{{field.FieldName}}</td>
-                        <td>{{field.Batch}}</td>
-                        <td>{{field.Box}}</td>
-                        <td>{{field.Hectares}}</td>
-                        <td>
-                            <button class="btn btn-icon command-delete" ng-click="confirmFieldDel(field.Id, field.FieldName)">
-                        <span class="md md-delete"></span>
+                <table id="fieldTable" class="table table-striped table-bordered table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <th>Campo</th>
+                            <th>Huerta/Lote</th>
+                            <th>Cuadro</th>
+                            <th>Hectareas</th>
+                            <th>Porcentajes de Nuez</th>
+                            <th>Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="field in fieldsAndBatches | filter:searchField">
+                            <td>{{field.FieldName}}</td>
+                            <td>{{field.Batch}}</td>
+                            <td>{{field.Box}}</td>
+                            <td>{{field.Hectares}}</td>
+                            <td>{{field.NutPercentages}}</td>
+                            <td>
+                                <button class="btn btn-default" ng-click="confirmFieldDel(field.Id, field.FieldName)">
+                        <i class="md md-delete"></i>
                     </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
