--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -83,53 +83,55 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body table-responsive">
-                                <table class="table table-striped table-vmiddle">
-                                    <thead>
-                                        <tr>
-                                            <th>No. de Parrilla</th>
-                                            <th>Fecha de Captura</th>
-                                            <th>Recepciones</th>
-                                            <th>Tamaño</th>
-                                            <th>Sacos</th>
-                                            <th>Kilos</th>
-                                            <th>Calidad</th>
-                                            <th>Variedad</th>
-                                            <th>Productor</th>
-                                            <th>Campo</th>
-                                            <th>Peso de la Muestra</th>
-                                            <th>Humedad</th>
-                                            <th>No.Nueces por Kilo</th>
-                                            <th>Rendimiento</th>
-                                            <th>Total</th>
-                                            <th>Agregar</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr ng-repeat="grill in grills | filter:searchUser">
-                                            <td>{{grill.Folio}}</td>
-                                            <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
-                                            <td>{{grill.Receptions}}</td>
-                                            <td>{{grill.Size}}</td>
-                                            <td>{{grill.Sacks}}</td>
-                                            <td>{{grill.Kilos}}</td>
-                                            <td>{{grill.Quality}}</td>
-                                            <td>{{grill.Variety}}</td>
-                                            <td>{{grill.Producer}}</td>
-                                            <td>{{grill.FieldName}}</td>
-                                            <td>{{grill.SampleWeight}}</td>
-                                            <td>{{grill.HumidityPercent}}</td>
-                                            <td>{{grill.WalnutNumber}}</td>
-                                            <td>{{grill.Performance}}</td>
-                                            <td>{{grill.TotalWeightOfEdibleNuts}}</td>
-                                            <td>
-                                                <div class="checkbox m-b-15">
-                                                    <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
-                                                </div>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                            <div class="card-body card-padding">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered table-condensed table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>No. de Parrilla</th>
+                                                <th>Fecha de Captura</th>
+                                                <th>Recepciones</th>
+                                                <th>Tamaño</th>
+                                                <th>Sacos</th>
+                                                <th>Kilos</th>
+                                                <th>Calidad</th>
+                                                <th>Variedad</th>
+                                                <th>Productor</th>
+                                                <th>Campo</th>
+                                                <th>Peso de la Muestra</th>
+                                                <th>Humedad</th>
+                                                <th>No.Nueces por Kilo</th>
+                                                <th>Rendimiento</th>
+                                                <th>Total</th>
+                                                <th>Agregar</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr ng-repeat="grill in grills | filter:searchUser">
+                                                <td>{{grill.Folio}}</td>
+                                                <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
+                                                <td>{{grill.Receptions}}</td>
+                                                <td>{{grill.Size}}</td>
+                                                <td>{{grill.Sacks}}</td>
+                                                <td>{{grill.Kilos}}</td>
+                                                <td>{{grill.Quality}}</td>
+                                                <td>{{grill.Variety}}</td>
+                                                <td>{{grill.Producer}}</td>
+                                                <td>{{grill.FieldName}}</td>
+                                                <td>{{grill.SampleWeight}}</td>
+                                                <td>{{grill.HumidityPercent}}</td>
+                                                <td>{{grill.WalnutNumber}}</td>
+                                                <td>{{grill.Performance}}</td>
+                                                <td>{{grill.TotalWeightOfEdibleNuts}}</td>
+                                                <td>
+                                                    <div class="checkbox m-b-15">
+                                                        <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -148,7 +150,7 @@
                     </div>
                     <div class="card-body card-padding">
                         <div class="table-responsive">
-                            <table id="tableId" class="table table-bordered">
+                            <table id="tableId" class="table table-striped table-bordered table-condensed table-hover">
                                 <thead>
                                     <tr>
                                         <th>No. de Parrilla</th>
@@ -172,7 +174,7 @@
                                 <tbody>
                                     <tr ng-repeat-start="grillIssue in issues | filter: searchGrillIssues">
                                         <td colspan="3"><b>Remision: </b>{{grillIssue.Remission}}</td>
-                                        <td colspan="3"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture}}</td>
+                                        <td colspan="4"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
                                         <td colspan="3"><b>Camion: </b>{{grillIssue.Truck}}</td>
                                         <td colspan="3"><b>Conductor: </b>{{grillIssue.Driver}}</td>
                                         <td colspan="3"><b>Caja:</b>{{grillIssue.Box}}</td>
