--- a/app/views/producersAndVarieties.html
+++ b/app/views/producersAndVarieties.html
@@ -37,15 +37,16 @@
                         <label for="ivariety" class="col-sm-2 control-label">Nombre *</label>
                         <div class="col-sm-10">
                             <div class="fg-line">
-                                <input name="varietyName" type="text" class="form-control input-sm" id="ivariety" ng-minlength="3" ng-maxlength="150" placeholder="variedad" ng-model="variety.varietyName" required>
+                                <input name="varietyName" type="text" class="form-control input-sm" id="ivariety" ng-minlength="3" ng-maxlength="150" placeholder="variedad"
+                                    ng-model="variety.varietyName" required>
                                 <small class="help-block has-error" style="color:red" ng-show="varietyForm.varietyName.$error.minlength">El nombre de la variedad debe contener al menos 3 caracteres.</small>
                                 <small class="help-block has-error" style="color:red" ng-show="varietyForm.varietyName.$error.maxlength">El nombre de la variedad es demasiado extenso, debe contener menos de 150 caracteres.</small>
                             </div>
                         </div>
                     </div>
-                    <div class="card-body table-responsive">
-                        <table class="table table-bordered">
-                            <thead class="thead-inverse">
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-condensed table-hover">
+                            <thead>
                                 <tr>
                                     <th>Chicas</th>
                                     <th colspan="2">Medianas</th>
@@ -77,39 +78,41 @@
             <div class="card-header">
                 <h2>Productores</h2>
             </div>
-            <div class="card-body table-responsive">
-                <div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchProducer">
+            <div class="card-body card-padding">
+                <div class="table-responsive">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchProducer">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <hr>
-                <button class="btn btn-link" ng-click="generateProducersPDF()">
+                    <hr>
+                    <button class="btn btn-link" ng-click="generateProducersPDF()">
                     <span class="glyphicon glyphicon-share"></span>Exportar PDF
                 </button>
-                <table id="producerTable" class="table table-striped table-vmiddle">
-                    <thead>
-                        <tr>
-                            <th data-column-id="id">Nombre</th>
-                            <th data-column-id="commands">Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="producer in producers | filter:searchProducer">
-                            <td>{{producer.ProducerName}}</td>
-                            <td>
-                                <button class="btn btn-icon command-delete" ng-click="confirmationDelete(producer.Id, producer.ProducerName)">
+                    <table id="producerTable" class="table table-striped table-bordered table-condensed table-hover">
+                        <thead>
+                            <tr>
+                                <th data-column-id="id">Nombre</th>
+                                <th data-column-id="commands">Opciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="producer in producers | filter:searchProducer">
+                                <td>{{producer.ProducerName}}</td>
+                                <td>
+                                    <button class="btn btn-icon command-delete" ng-click="confirmationDelete(producer.Id, producer.ProducerName)">
                         <span class="md md-delete"></span>
                     </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -118,45 +121,47 @@
             <div class="card-header">
                 <h2>Variedades</h2>
             </div>
-            <div class="card-body table-responsive">
-                <div class="col-sm-12 actionbar">
-                    <div class="form-group">
-                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                        <div class="col-sm-12">
-                            <div class="fg-line">
-                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchVariety">
+            <div class="card-body card-padding">
+                <div class="table-responsive">
+                    <div class="col-sm-12 actionbar">
+                        <div class="form-group">
+                            <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                            <div class="col-sm-12">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchVariety">
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <hr>
-                <button class="btn btn-link" ng-click="generateVarietiesPDF()">
+                    <hr>
+                    <button class="btn btn-link" ng-click="generateVarietiesPDF()">
                     <span class="glyphicon glyphicon-share"></span>Exportar PDF
                 </button>
-                <table id="varietyTable" class="table table-striped table-vmiddle">
-                    <thead>
-                        <tr>
-                            <th data-column-id="id">Nombre</th>
-                            <th>Chicas</th>
-                            <th>Medianas</th>
-                            <th>Grandes</th>
-                            <th data-column-id="commands">Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="variety in varieties | filter:searchVariety">
-                            <td>{{variety.VarietyName}}</td>
-                            <td>{{variety.Small}}</td>
-                            <td>{{variety.MediumStart.toString() + '-' + variety.MediumEnd.toString()}}</td>
-                            <td>{{variety.LargeStart.toString() + '-' + variety.LargeEnd.toString()}}</td>
-                            <td>
-                                <button class="btn btn-icon command-delete" ng-click="confirmVarietyDel(variety.Id, variety.VarietyName)">
+                    <table id="varietyTable" class="table table-striped table-bordered table-condensed table-hover">
+                        <thead>
+                            <tr>
+                                <th data-column-id="id">Nombre</th>
+                                <th>Chicas</th>
+                                <th>Medianas</th>
+                                <th>Grandes</th>
+                                <th data-column-id="commands">Opciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="variety in varieties | filter:searchVariety">
+                                <td>{{variety.VarietyName}}</td>
+                                <td>{{variety.Small}}</td>
+                                <td>{{variety.MediumStart.toString() + '-' + variety.MediumEnd.toString()}}</td>
+                                <td>{{variety.LargeStart.toString() + '-' + variety.LargeEnd.toString()}}</td>
+                                <td>
+                                    <button class="btn btn-icon command-delete" ng-click="confirmVarietyDel(variety.Id, variety.VarietyName)">
                         <span class="md md-delete"></span>
                     </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
