--- a/app/views/reception/receptionManage.html
+++ b/app/views/reception/receptionManage.html
@@ -3,107 +3,109 @@
         <div class="card-header">
             <h2>Recepciones</h2>
         </div>
-        <div class="card-body table-responsive">
-            <div class="col-sm-12 actionbar">
-                <div class="form-group">
-                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                    <div class="col-sm-12">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReception">
-                        </div>
-                    </div>
-                </div>
-                <div ng-show="showSearchOptions">
-                    <div class="col-sm-4">
-                        <div class="form-group">
+        <div class="card-body card-padding">
+            <div class="table-responsive">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
                             <div class="fg-line">
-                                <input type="text" class="form-control" placeholder="buscar por folio.." ng-model="search.folio">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchReception">
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4">
-                        <div class="form-group">
-                            <div class="fg-line">
-                                <input type="text" class="form-control" placeholder="buscar por variedad.." ng-model="search.variety">
+                    <div ng-show="showSearchOptions">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control" placeholder="buscar por folio.." ng-model="search.folio">
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="form-group">
-                            <div class="fg-line">
-                                <input type="text" class="form-control" placeholder="buscar por productor.." ng-model="search.producer">
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control" placeholder="buscar por variedad.." ng-model="search.variety">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="form-group">
+                                <div class="fg-line">
+                                    <input type="text" class="form-control" placeholder="buscar por productor.." ng-model="search.producer">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm-12">
-                <div class="checkbox m-b-15">
-                    <label><input type="checkbox" ng-model="showSearchOptions"><i class="input-helper"></i>MOSTRAR MAS OPCIONES DE BUSQUEDA</label>
+                <div class="col-sm-12">
+                    <div class="checkbox m-b-15">
+                        <label><input type="checkbox" ng-model="showSearchOptions"><i class="input-helper"></i>MOSTRAR MAS OPCIONES DE BUSQUEDA</label>
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <button class="btn btn-link" ng-click="generatePDF()">
+                <hr>
+                <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="receptionTable" class="table table-sm table-bordered table-hover">
-                <thead>
-                    <tr>
-                        <th>Folio</th>
-                        <th>Remisiones</th>
-                        <th>Productor</th>
-                        <th>Campo</th>
-                        <th>Variedad</th>
-                        <th>Camion/Placas</th>
-                        <th>Recibido</th>
-                        <th>Cilindro</th>
-                        <th>Fecha de Captura</th>
-                        <th>Horas de Secado</th>
-                        <th>Parrillas</th>
-                        <th ng-if="!IsGrillToReception">Opciones</th>
-                        <th ng-if="IsGrillToReception">Asignar Folio</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="reception in receptions | filter:searchReception  | filter:{Folio: search.folio, Variety:search.variety, ProducerName: search.producer}">
-                        <td>{{reception.Folio}}</td>
-                        <td>{{reception.Remissions}}</td>
-                        <td>{{reception.ProducerName}}</td>
-                        <td>{{reception.FieldName}}</td>
-                        <td>{{reception.Variety}}</td>
-                        <td>{{reception.CarRegistration}}</td>
-                        <td>{{reception.ReceivedFromField}}</td>
-                        <td>{{reception.Cylinder}}</td>
-                        <td>{{reception.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
-                        <td>{{reception.HeatHoursDrying}}</td>
-                        <td>{{reception.Grills}}</td>
-                        <td ng-if="!IsGrillToReception">
-                            <button class="btn btn-default" ng-click="redirectUpdate(reception.Id,reception,reception.Folio)" data-toggle="tooltip" data-placement="bottom"
-                                title="Modificar">
+                <table id="receptionTable" class="table table-striped table-bordered table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <th>Folio</th>
+                            <th>Remisiones</th>
+                            <th>Productor</th>
+                            <th>Campo</th>
+                            <th>Variedad</th>
+                            <th>Camion/Placas</th>
+                            <th>Recibido</th>
+                            <th>Cilindro</th>
+                            <th>Fecha de Captura</th>
+                            <th>Horas de Secado</th>
+                            <th>Parrillas</th>
+                            <th ng-if="!IsGrillToReception">Opciones</th>
+                            <th ng-if="IsGrillToReception">Asignar Folio</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="reception in receptions | filter:searchReception  | filter:{Folio: search.folio, Variety:search.variety, ProducerName: search.producer}">
+                            <td>{{reception.Folio}}</td>
+                            <td>{{reception.Remissions}}</td>
+                            <td>{{reception.ProducerName}}</td>
+                            <td>{{reception.FieldName}}</td>
+                            <td>{{reception.Variety}}</td>
+                            <td>{{reception.CarRegistration}}</td>
+                            <td>{{reception.ReceivedFromField}}</td>
+                            <td>{{reception.Cylinder}}</td>
+                            <td>{{reception.EntryDate | date:'dd/MM/yyyy HH:mm'}}</td>
+                            <td>{{reception.HeatHoursDrying}}</td>
+                            <td>{{reception.Grills}}</td>
+                            <td ng-if="!IsGrillToReception">
+                                <button class="btn btn-default" ng-click="redirectUpdate(reception.Id,reception,reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                                    title="Modificar">
                             <i class="md md-edit"></i>
                         </button>
-                            <button class="btn btn-default" ng-click="confirmationDelete(reception.Id, reception.Folio)" data-toggle="tooltip" data-placement="bottom"
-                                title="Eliminar">
+                                <button class="btn btn-default" ng-click="confirmationDelete(reception.Id, reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                                    title="Eliminar">
                             <i class="md md-delete"></i>
                         </button>
-                            <button class="btn btn-default" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)" data-toggle="tooltip"
-                                data-placement="bottom" title="Asignar recepcion a parrilla">
+                                <button class="btn btn-default" ng-click="redirectReceptionToGrill(reception.Folio, reception.Id)" data-toggle="tooltip"
+                                    data-placement="bottom" title="Asignar recepcion a parrilla">
                             <i class="md md-view-module"></i>
                         </button>
-                            <button class="btn btn-default" ng-click="redirectAddRemission(reception.Folio)" data-toggle="tooltip" data-placement="bottom"
-                                title="Agregar remisiones">
+                                <button class="btn btn-default" ng-click="redirectAddRemission(reception.Folio)" data-toggle="tooltip" data-placement="bottom"
+                                    title="Agregar remisiones">
                             <i class="md md-description"></i>
                         </button>
-                        </td>
-                        <td ng-if="IsGrillToReception">
-                            <div class="toggle-switch">
-                                <input id="{{reception.Id}}" type="checkbox" hidden="hidden" ng-model="reception.IsAlreadyAssigned" ng-change="addReceptionToGrill(reception.Id, reception.IsAlreadyAssigned)">
-                                <label for="{{reception.Id}}" class="ts-helper"></label>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                            <td ng-if="IsGrillToReception">
+                                <div class="toggle-switch">
+                                    <input id="{{reception.Id}}" type="checkbox" hidden="hidden" ng-model="reception.IsAlreadyAssigned" ng-change="addReceptionToGrill(reception.Id, reception.IsAlreadyAssigned)">
+                                    <label for="{{reception.Id}}" class="ts-helper"></label>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
