--- a/app/views/report/grill/reportingProcess.html
+++ b/app/views/report/grill/reportingProcess.html
@@ -5,14 +5,14 @@
         </div>
         <div class="card-body card-padding">
             <div class="table-responsive">
-            <hr>
-            <button class="btn btn-link" ng-click="reportingProcessExportPdf()">
+                <hr>
+                <button class="btn btn-link" ng-click="reportingProcessExportPdf()">
                     <span class="glyphicon glyphicon-share"></span> Exportar PDF
             </button>
-            <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('reportingProcess'))">
+                <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('reportingProcess'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
-                <table id="reportingProcess" class="table table-striped table-bordered">
+                <table id="reportingProcess" class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
                             <th>Variedad</th>
