--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -11,8 +11,7 @@
                 <button class="btn btn-link" onclick="selectElementContents(document.getElementById('grillIssues'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <body>
-                <table id="secondGrillIssues" class="table table-bordered">
+                <table id="secondGrillIssues" class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
                             <th>No. de Parrilla</th>
@@ -55,7 +54,6 @@
                         </tr>
                     </tbody>
                 </table>
-                </body>
             </div>
         </div>
     </div>
