--- a/app/views/report/reportOrigin.html
+++ b/app/views/report/reportOrigin.html
@@ -12,14 +12,23 @@
                 <button class="btn btn-link" value="select genericReport" onclick="selectElementContents(document.getElementById('originReportTable'))">
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                 </button>
-                <table id="originReportTable" class="table table-striped table-bordered">
+                <table id="originReportTable" class="table table-striped table-bordered table-condensed table-hover">
                     <thead>
                         <tr>
-                            <th>Huerta</th>
-                            <th>Hectareas</th>
+                            <th></th>
+                            <th></th>
+                            <th colspan="{{reportOriginFirst.Varieties.length}}">Total en Variedades</th>
+                            <th></th>
+                            <th></th>
+                            <th colspan="{{reportOriginFirst.Varieties.length}}">Rendimiento por Variedad</th>
+                        </tr>
+                        <tr>
+                            <th rowspan="2">Huerta</th>
+                            <th rowspan="2">Hectareas</th>
                             <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}</th>
-                            <th>Produccion Total</th>
+                            <th rowspan="2">Produccion Total</th>
                             <th>Rendimiento / Ha</th>
+                            <th ng-repeat="variety in reportOriginFirst.Varieties">{{variety.Variety}}</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -29,6 +38,7 @@
                             <td ng-repeat="variety in report.Varieties">{{variety.Total}}</td>
                             <td>{{report.TotalProduction}}</td>
                             <td>{{report.PerformancePerHa}}</td>
+                            <td ng-repeat="variety in report.Varieties">{{variety.Performance}}</td>
                         </tr>
                     </tbody>
                 </table>
