--- a/app/views/users.html
+++ b/app/views/users.html
@@ -9,7 +9,8 @@
                     <label for="iusername" class="col-sm-2 control-label">Usuario *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input name="user" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" ng-minlength="8" data-ng-model="registration.UserName" required>
+                            <input name="user" type="text" class="form-control input-sm" id="iusername" placeholder="Nombre de Usuario" ng-minlength="8"
+                                data-ng-model="registration.UserName" required>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.user.$error.minlength">El nombre de usuario debe contener al menos 8 caracteres.</small>
                         </div>
                     </div>
@@ -18,7 +19,8 @@
                     <label for="useremail" class="col-sm-2 control-label">Email *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input name="email" type="email" class="form-control input-sm" id="useremail" placeholder="email" data-ng-model="registration.Email" required>
+                            <input name="email" type="email" class="form-control input-sm" id="useremail" placeholder="email" data-ng-model="registration.Email"
+                                required>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.email.$invalid && !userForm.email.$pristine">El formato de correo no es correcto.</small>
                         </div>
                     </div>
@@ -27,7 +29,8 @@
                     <label for="ipassword" class="col-sm-2 control-label">Contraseña *</label>
                     <div class="col-sm-10">
                         <div class="fg-line">
-                            <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password" ng-pattern="passwordRegex" required>
+                            <input name="pass" type="password" class="form-control input-sm" id="ipassword" placeholder="contraseña" data-ng-model="registration.Password"
+                                ng-pattern="passwordRegex" required>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.pass.$error.pattern">La Contraseña debe contener al menos una mayuscula, una minuscula, un numero y ser mayor a 8 caracteres.</small>
                         </div>
                     </div>
@@ -37,7 +40,8 @@
                     <div class="col-sm-10">
                         <div class="fg-line">
                             <input name="confirmPass" type="password" class="form-control input-sm" id="icpassword" placeholder="confirmar contraseña"
-                                ng-model="registration.ConfirmPassword" confirm-password="registration.Password" ng-pattern="passwordRegex" required>
+                                ng-model="registration.ConfirmPassword" confirm-password="registration.Password" ng-pattern="passwordRegex"
+                                required>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.confirmPass.$invalid && !userForm.confirmPass.$pristine">Las Contraseñas no coinciden.</small>
                             <small class="help-block has-error" style="color:red" ng-show="userForm.confirmPass.$error.pattern">La Contraseña debe contener al menos una mayuscula, una minuscula, un numero y ser mayor a 8 caracteres.</small>
                         </div>
@@ -63,42 +67,44 @@
         <div class="card-header">
             <h2>Usuarios</h2>
         </div>
-        <div class="card-body table-responsive">
-            <div class="col-sm-12 actionbar">
-                <div class="form-group">
-                    <label for="isearch" class="col-sm-2 control-label">Buscar</label>
-                    <div class="col-sm-12">
-                        <div class="fg-line">
-                            <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+        <div class="card-body card-padding">
+            <div class="table-responsive">
+                <div class="col-sm-12 actionbar">
+                    <div class="form-group">
+                        <label for="isearch" class="col-sm-2 control-label">Buscar</label>
+                        <div class="col-sm-12">
+                            <div class="fg-line">
+                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <hr>
-            <button class="btn btn-link" ng-click="generatePDF()">
+                <hr>
+                <button class="btn btn-link" ng-click="generatePDF()">
                 <span class="glyphicon glyphicon-share"></span>Exportar PDF
             </button>
-            <table id="userTable" class="table table-striped table-vmiddle">
-                <thead>
-                    <tr>
-                        <th data-column-id="id">Nombre</th>
-                        <th data-column-id="role">Rol</th>
-                        <th data-column-id="commands">Opciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="user in users | filter:searchUser">
-                        <td>{{user.UserName}}</td>
-                        <td>{{user.Role}}</td>
-                        <td>
-                            </button>
-                            <button class="btn btn-icon command-delete" ng-click="confirmDeleteUser(user.Id, user.UserName)">
+                <table id="userTable" class="table table-striped table-bordered table-condensed table-hover">
+                    <thead>
+                        <tr>
+                            <th data-column-id="id">Nombre</th>
+                            <th data-column-id="role">Rol</th>
+                            <th data-column-id="commands">Opciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="user in users | filter:searchUser">
+                            <td>{{user.UserName}}</td>
+                            <td>{{user.Role}}</td>
+                            <td>
+                                </button>
+                                <button class="btn btn-icon command-delete" ng-click="confirmDeleteUser(user.Id, user.UserName)">
                         <span class="md md-delete"></span>
                     </button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
